--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,7 @@ h1 {font-size: 1.8em;
     font-family: futura-pt;
     color: orange;
   }
+h2 {background: #ce6928;
+    color: white;
+    font: inherit;
+}
