--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,6 @@ h1 {font-size: 1.8em;
 }
 h2 {font-family: futura-pt;
     color: white;
-    font: inherit;
+    font-weight: 1.8em;
+    font-family: 200;
 }
