--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ h1 {font-size: 1.8em;
     font-family: futura-pt;
     color: orange;
   }
-h2 {font-family: futura-apt;
+font-family: : futura-pt;
     color: white;
-    font: inherit;
+    font size: 1.8em;
+    font-family: 200;h2 {
 }
