--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ h1 {font-size: 1.8em;
     font-family: futura-pt;
     color: orange;
 }
-h2 {font-family: futura-pt;
+h2 {font-family: : futura-pt;
     color: white;
-    font-weight: 1.8em;
+    font size: 1.8em;
     font-family: 200;
 }
